labeler config test
Signed-off-by: Shaun Thompson <shaun.thompson@docker.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -158,5 +158,6 @@ area/worker:
 # area:windows
 area/windows:
   - changed-files:
-      - any-glob-to-any-file: "**/*_windows.go"
-      - all-globs-to-all-files: "!vendor/**/*_windows.go"
+      - any-glob-to-any-file:
+          - "**/*_windows.go"
+          - "!vendor/**/*_windows.go"
