--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -158,6 +158,6 @@ area/worker:
 # area:windows
 area/windows:
   - changed-files:
-      - any-glob-to-any-file:
-          - "!vendor/**"
-          - "**/*_windows.go"
+      -all-glob-to-all-file:
+        - "!vendor/**"
+        - "**/*_windows.go"
