--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -157,7 +157,7 @@ area/worker:
 
 # area:windows
 area/windows:
-  - changed-files:
-      - all-globs-to-all-file:
-          - "!vendor/**/*_windows.go"
-          - "**/*_windows.go"
+  - all:
+      - changed-files:
+          - any-glob-to-any-file: "**/*_windows.go"
+          - all-globs-to-all-files: "!vendor/**/*_windows.go"
