--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -160,4 +160,4 @@ area/windows:
   - all:
       - changed-files:
           - any-glob-to-any-file: "**/*_windows.go"
-          - all-globs-to-all-files: "!vendor/**/*_windows.go"
+          - all-globs-to-all-files: "!vendor/**"
