--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -161,4 +161,4 @@ area/windows:
       - changed-files:
           - any-glob-to-any-file:
               - "**/*_windows.go"
-          - all-globs-to-all-files: "!vendor/**"
+          - all-globs-to-all-files: "!vendor/**/*_windows.go"
